human-intervention-logs/org.hibernate.validator:hibernate-validator:9.1.0.Final/gradle-test/gradle-test-2026-06-24T15-36-20-770181Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.hibernate.validator:hibernate-validator:9.1.0.Final
Command: `/home/mihailo/git/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8397-6ee18dfd/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 13 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :compileJava UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/mihailo/git/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8397-6ee18dfd/tests/src/org.hibernate.validator/hibernate-validator/9.1.0.Final/src/test/java/com/example/hibernatevalidator/LoadClassTest.java:76: error: cannot find symbol
                .property(HibernateValidatorConfiguration.PROPERTY_NODE_NAME_PROVIDER_CLASSNAME,
                ^
  symbol:   method property(String,String)
  location: interface HibernateValidatorConfiguration
/home/mihailo/git/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8397-6ee18dfd/tests/src/org.hibernate.validator/hibernate-validator/9.1.0.Final/src/test/java/com/example/hibernatevalidator/LoadClassTest.java:121: error: cannot find symbol
                .property(HibernateValidatorConfiguration.PROPERTY_NODE_NAME_PROVIDER_CLASSNAME,
                ^
  symbol:   method property(String,String)
  location: variable configuration of type BaseHibernateValidatorConfiguration<?>
2 errors


[Incubating] Problems report is available at: file:///home/mihailo/git/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8397-6ee18dfd/tests/src/org.hibernate.validator/hibernate-validator/9.1.0.Final/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/mihailo/git/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8397-6ee18dfd/tests/src/org.hibernate.validator/hibernate-validator/9.1.0.Final/src/test/java/com/example/hibernatevalidator/LoadClassTest.java:76: error: cannot find symbol
                  .property(HibernateValidatorConfiguration.PROPERTY_NODE_NAME_PROVIDER_CLASSNAME,
                  ^
    symbol:   method property(String,String)
    location: interface HibernateValidatorConfiguration
  /home/mihailo/git/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8397-6ee18dfd/tests/src/org.hibernate.validator/hibernate-validator/9.1.0.Final/src/test/java/com/example/hibernatevalidator/LoadClassTest.java:121: error: cannot find symbol
                  .property(HibernateValidatorConfiguration.PROPERTY_NODE_NAME_PROVIDER_CLASSNAME,
                  ^
    symbol:   method property(String,String)
    location: variable configuration of type BaseHibernateValidatorConfiguration<?>
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

13 actionable tasks: 1 executed, 12 up-to-date
BUILD FAILED in 15s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/mihailo/git/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8397-6ee18dfd/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.hibernate.validator:hibernate-validator:9.1.0.Final failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 19s
9 actionable tasks: 1 executed, 8 up-to-date
